--- a/login.html
+++ b/login.html
@@ -2,28 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Login - Circular Cart</title>
+  <title>Login - Walmart</title>
   <link rel="stylesheet" href="login.css" />
 </head>
 <body>
 
-<div class="login-box">
-  <h2>Login</h2>
-  <input type="email" id="email" placeholder="Email" />
-  <input type="password" id="password" placeholder="Password" />
-  <button onclick="loginUser()">Sign In</button>
+<!-- ✅ Walmart-style header -->
+<header>
+  <div class="logo">Walmart</div>
+  <nav>
+    <button onclick="location.href='index.html'">Home</button>
+    <button onclick="location.href='circular-cart.html'">Circular Cart</button>
+  </nav>
+</header>
+
+<!-- ✅ Login Form Section -->
+<div class="login-container">
+  <h2>Sign In</h2>
+  <form onsubmit="loginUser(event)">
+    <label>Email</label>
+    <input type="email" required />
+
+    <label>Password</label>
+    <input type="password" required />
+
+    <button type="submit">Login</button>
+  </form>
 </div>
 
 <script>
-  function loginUser() {
-    const email = document.getElementById("email").value;
-    if (email.trim()) {
-      localStorage.setItem("userEmail", email);
-      alert("Login Successful!");
-      window.location.href = "circular-cart.html";
-    } else {
-      alert("Enter email and password!");
-    }
+  function loginUser(e) {
+    e.preventDefault();
+    // fake login logic
+    alert("Logged in successfully!");
+    window.location.href = "index.html"; // or redirect to dashboard
   }
 </script>
 
